# base

./: .gitignore  CMakeLists.txt  LINCENSE  Readme.md
_examples/: CMakeLists.txt  sample_cube.c  sample_cube.hlsl  sample_instancing.c  sample_instancing.hlsl  sample_sdfRect.c  sample_sdfRect.hlsl  sample_shadows.c  sample_shadows.hlsl  sample_texture.c  sample_texture.hlsl  triangle.c  triangle.hlsl
_tests/: CMakeLists.txt  str_test.c  test_math.c
_tools/: shd_compile.cc
app/: app.h
app/impl/: app.c
base/: base.h  base_args.h  base_atomic.h  base_color.h  base_math.h  base_mem.h  base_str.h  base_time.h  base_types.h
base/impl/: base_args.c  base_mem.c  base_str.c  base_time.c
log/: log.h
log/impl/: log.c
os/: os.h
os/impl/: os.c
parser/: scf.h  tokenizer.h  url.h
parser/impl/: scf.c  tokenizer.c  url.c
rx/: rx.h  rx_helper.h
rx/impl/: offalloc.c  offalloc.h  rx.c  rx.m
shd/: shd.h
shd/impl/: WinAdapter.h  com_ptr.hpp  combine_source.c  dxc_wrapper.cc  dxc_wrapper.h  dxcapi.h  shd_main.cc
tools_src/: mergeCode.c  shdc.c
